test/error/sema/self-binding-not-mut.dsk
struct S
    x: int
    func f(mut self: @) -> void
        self.x = 1
    end
end

let s = S(x = 0)
s.f()
